terraform/environments/cloud-platform/cluster-core/envoy_manifests/app_backend_example_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ky-test
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5678
