terraform/environments/cloud-platform/cluster-core/envoy_manifests/app_frontend_example_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: ky-test
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 5678
